--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   }
 }
